# edge-face-recognition-v2

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
scripts/: collect_faces.py
src/edge_face/: __init__.py  camera.py  cli.py  config.py  dataset.py  detector.py  model.py  pipeline.py
